--- a/styles.css
+++ b/styles.css
@@ -2,20 +2,34 @@ body {
     font-family: Arial, sans-serif;
     margin: 40px;
     padding: 0;
-    background-color: #f4f4f4;
-    border: 10px solid #ccc;
+    background-color: #c8d9cf;
+    border: 10px solid #60886c;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
 }
 
 header {
     display: flex;
     justify-content: center;
-    padding: 20px;
-    background-color: #fff;
+    padding: 10px;
+    background-color: #60886c;
     margin-bottom: 20px;
+    color: white;
+    
+}
+h1 {
+    font-family: 'Dancing Script', cursive; /* Fuente llamativa y cursiva */
+    font-size: 70px; /* Tamaño más grande */
+    font-weight: bold; /* Negrita */
+    color: #2c3e50; /* Color oscuro para resaltar */
+    text-align: left; /* Centrar el texto */
+    margin-top: 10px; /* Espaciado superior */
+    text-shadow: 10px 10px 5px rgba(0, 0, 0, 0.2); /* Efecto de sombra sutil */
 }
 
+
+
 nav ul {
+    
     list-style: none;
     padding: 0;
     display: flex;
@@ -31,7 +45,6 @@ nav a {
     position: relative; /* Necesario para la línea inferior */
     transition: all 0.3s ease;
 }
-
 nav a:hover::after {
     content: "";
     position: absolute;
@@ -50,21 +63,18 @@ nav a:hover::after {
     margin: 20px;
 }
 
-audiolibro-info {
+.audiolibro-info {
     max-width: 400px;
 }
 
-audiolibro-info h1 {
-    font-size: 48px;
-    color: #333;
-}
 
-audiolibro-info p {
+
+.audiolibro-info p {
     color: #555;
 }
 
 button {
-    background-color: #0073e6;
+    background-color: #60886c;
     color: white;
     border: none;
     padding: 10px 20px;
@@ -73,17 +83,22 @@ button {
     border-radius: 5px;
 }
 
-audiolibro-imagen img {
+button:hover {
+    background-color: #4a6b55;
+}
+
+.audiolibro-imagen img {
     max-width: 300px;
     border-radius: 10px;
 }
 
-estadisticas {
+.estadisticas {
     display: flex;
     justify-content: space-around;
-    background-color: #ddd;
+    background-color: #60886c;
     padding: 20px;
     margin: 20px;
+    color: white;
 }
 
 .modal-overlay {
@@ -99,21 +114,22 @@ estadisticas {
 }
 
 .modal {
+    position: relative; /* Asegura que los elementos internos se posicionen dentro de él */
     background-color: white;
     padding: 20px;
     border-radius: 5px;
-    position: relative;
-    width: 300px; /* Asegura un ancho fijo para el modal */
+    width: 300px;
 }
 
 .modal .close-modal {
     position: absolute;
-    top: 10px;
-    right: 10px;
+    top: 5px; /* Ajustar margen desde arriba */
+    left: 120px; /* Ajustar margen desde la derecha */
     border: none;
-    background: none;
-    font-size: 20px;
-    cursor: pointer;
+    background: none; /* Sin fondo */
+    font-size: 24px; /* Tamaño adecuado */
+    color: #333; /* Color neutral */
+    
 }
 
 .modal input[type="text"],
@@ -126,15 +142,13 @@ estadisticas {
 }
 
 .modal button {
-    background-color: #4CAF50;
+    background-color: #60886c;
     color: white;
     padding: 10px 15px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    width: 100%; /* El boton dentro del modal ocupa todo el ancho */
+    width: 100%;
 }
 
-.modal button:hover {
-    background-color: #3e8e41;
-}
+
